--- a/style.css
+++ b/style.css
@@ -2,9 +2,13 @@ html {
     background-color: #ccd9ff;
 }
 body {
-    width: 600px;
     margin: o auto;
     background-color: #ccd9ff;
     padding: 0 20px 20px 20px;
     border: 5px solid rgb(78, 122, 189);
+}
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
